--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ jobs:
   build:
     docker:
       - image: circleci/php:7.3.5
-
+    working_directory: ~/project/Code
     steps:
       - run:
-          command: php Code/index.php
+          command: php index.php
           name: test php
