--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
           command: cd tmpdir/Code
           name: Get into Code folder
       - run:
+          command: ls
+          name: Listing files
+      - run:
           command: php index.php
           name: Running index.php
       - run:
