pdating CircleCi settings

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,20 +7,14 @@ jobs:
     working_directory: ~/project/Code
     steps:
       - run:
-          command: git clone https://github.com/rospino74/StudentOS tmpdir && cd tmpdir
+          command: git clone https://github.com/rospino74/StudentOS tmpdir
           name: Cloning repository into tmpdir
       - run:
-          command: ls
+          command: cd tmpdir/Code && ls
           name: Listing files
       - run:
-          command: cd tmpdir/Code
-          name: Get into Code folder
-      - run:
-          command: ls
-          name: Listing files
-      - run:
-          command: php index.php
+          command: cd tmpdir/Code && php index.php
           name: Running index.php
       - run:
-          command: php home.php
+          command: cd tmpdir/Code && php home.php
           name: Running home.php
