--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,5 +16,5 @@ jobs:
           command: cd tmpdir/Code && php index.php
           name: Running index.php
       - run:
-          command: cd tmpdir/Code && php home.php
+          command: cd tmpdir/Code && php check.php
           name: Running home.php
