--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
       - checkout
       - run:
+            name: Updating Apt Index
+            command: sudo apt-get update
+      
+      - run:
       # Our primary container isn't MYSQL so run a sleep command until it's ready.
           name: Waiting for MySQL to be ready
           command: |
@@ -28,13 +32,7 @@ jobs:
       - run:
           name: Install MySQL CLI
           command: |
-            sudo rm /etc/apt/sources.list
-            echo "deb http://archive.debian.org/debian/ jessie-backports main" | sudo tee -a /etc/apt/sources.list
-            echo "deb-src http://archive.debian.org/debian/ jessie-backports main" | sudo tee -a /etc/apt/sources.list
-            echo "Acquire::Check-Valid-Until false;" | sudo tee -a /etc/apt/apt.conf.d/10-nocheckvalid
-            echo 'Package: *\nPin: origin "archive.debian.org"\nPin-Priority: 500' | sudo tee -a /etc/apt/preferences.d/10-archive-pin
-            sudo apt-get update
-            echo "Now install mysql: " & sudo apt install -y mysql-client
+            echo "Now install mysql: " & sudo apt-get install mysql-client
            
       #cloning code
       - run:
