--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     docker:
       - image: circleci/php:7.3.5
-      - image: circleci/mysql
+      - image: circleci/mysql:7.5.0
         environment:
             MYSQL_ROOT_PASSWORD: ''
             MYSQL_DATABASE: studentoa
