--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 #compilo
 jobs:
-  build:
+  home:
     docker:
       - image: circleci/php:7.3.5
       - image: circleci/mysql:5.7
@@ -13,10 +13,7 @@ jobs:
 
     working_directory: ~/project/
     steps:
-      - run:
-            name: Updating Apt Index
-            command: sudo apt-get update
-      
+      - checkout
       - run:
       # Our primary container isn't MYSQL so run a sleep command until it's ready.
           name: Waiting for MySQL to be ready
@@ -29,29 +26,56 @@ jobs:
             done
             echo Failed waiting for MySQL && exit 1
       - run:
-          name: Install MySQL CLI
+          name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " & sudo apt-get install mysql-client
-           
-      #cloning code
+            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client
+            echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
+            echo "Now create database config: " & cd Code/admin && mv template.db.config.php db.config.php
+            
+      #testing index.php
       - run:
-          command: git clone https://github.com/rospino74/StudentOS tmpdir
-          name: Cloning repository into tmpdir
+          command: cd Code && php index.php
+          name: Running home page
+
+  classroom:
+    docker:
+      - image: circleci/php:7.3.5
+      - image: circleci/mysql:5.7
+        environment:
+            MYSQL_ROOT_PASSWORD: ''
+            MYSQL_DATABASE: studentoa
+            MYSQL_USER: user
+            MYSQL_PASSWORD: passw0rd
+
+    working_directory: ~/project/
+    steps:
+      - checkout
+      - run:
+      # Our primary container isn't MYSQL so run a sleep command until it's ready.
+          name: Waiting for MySQL to be ready
+          command: |
+            for i in `seq 1 10`;
+            do
+              nc -z 127.0.0.1 3306 && echo MySQL is ready! && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
+      - run:
+          name: Setting Up MySQL
+          command: |
+            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client
+            echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
+            echo "Now create database config: " & cd Code/admin && mv template.db.config.php db.config.php
+            
+      #testing index.php
+      - run:
+          command: cd Code/classroom && php-cgi -f index.php class=class1
+          name: Running classroom page
           
-      #adding data
-      - run:
-          command: mysql -h 127.0.0.1 -u root studentoa < tmpdir/Code/admin/builder.sql
-          name: Adding data to db
-          
-      #renaming config file
-      - run:
-          command: cd tmpdir/Code/admin && mv template.db.config.php db.config.php
-          name: Renaming config file
-          
-      #testing
-      - run:
-          command: cd tmpdir/Code && php index.php
-          name: Running index file
-      - run:
-          command: cd tmpdir/Code/classroom && php index.php?class=class1
-          name: Running index file
+workflows:
+  version: 2
+  home_and_class:
+    jobs:
+      - home
+      - class
