fixing syntax problem

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,10 @@ jobs:
     working_directory: ~/project/
     steps:
       - checkout
+      
+      - run:
+        command: ls
+      
       - run:
       # Our primary container isn't MYSQL so run a sleep command until it's ready.
           name: Waiting for MySQL to be ready
