Trying to fix execution problem

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,7 @@ jobs:
           
 #installer
   load_sql:
-    docker:
+    machine:
       - image: circleci/mysql:5.7
         environment:
             MYSQL_ROOT_PASSWORD: ''
