--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,7 +96,6 @@ jobs:
       # Our primary container isn't MYSQL so run a sleep command until it's ready.
           name: Waiting MySQL
           command: |
-            sudo apt-get update && sudo apt-get install nc
             for i in `seq 1 10`;
             do
               nc -z 127.0.0.1 3306 && echo MySQL is ready! && exit 0
@@ -107,7 +106,7 @@ jobs:
       - run:
           name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " && sudo apt-get install mysql-client
+            echo "Now install mysql: " && sudo apt-get update && sudo apt-get install mysql-client
       - run:
           name: Importing Data
           command: |      
