--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run:
           name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client php-mysqli
+            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client php7.3-mysqli & echo -n "Success!"
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php
             
@@ -64,7 +64,7 @@ jobs:
       - run:
           name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client php-mysqli
+            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client php7.3-mysqli & echo -n "Success!"
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php
             
@@ -100,7 +100,7 @@ jobs:
       - run:
           name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client php-mysqli & echo "Success!"
+            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client php7.3-mysqli & echo -n "Success!"
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql & echo "Success!"
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php & echo "Success!"
             
@@ -138,7 +138,7 @@ jobs:
           name: Setting Up MySQL
           command: |
             echo "Now upgrade system: " & sudo apt-get update
-            echo "Now install mysql: " & sudo apt-get install mysql-client
+            echo "Now install mysql: " & sudo apt-get install mysql-client & echo -n "Success!"
       - run:
           name: Importing Data
           command: |      
