--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,8 @@ jobs:
       - run:
           name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client php7.3-mysqli & echo -n "Success!"
+            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client & echo -n "Success!"
+            echo "Now install mysql support for php: " & sudo apt-get install php7.3-mysqli && echo -n "Success!"
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php
             
@@ -64,7 +65,8 @@ jobs:
       - run:
           name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client php7.3-mysqli & echo -n "Success!"
+            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client & echo -n "Success!"
+            echo "Now install mysql support for php: " & sudo apt-get install php7.3-mysqli && echo -n "Success!"
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php
             
@@ -100,7 +102,8 @@ jobs:
       - run:
           name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client php7.3-mysqli & echo -n "Success!"
+            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client & echo -n "Success!"
+            echo "Now install mysql support for php: " & sudo apt-get install php7.3-mysqli && echo -n "Success!"
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql & echo "Success!"
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php & echo "Success!"
             
