--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ jobs:
       - run:
           name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client & echo -n "Success!"
-            echo "Now install mysql support for php: " & sudo apt install php-mysql && echo -n "Success!"
+            echo "Now install mysql: " & sudo apt-get update & sudo apt-get install mysql-client & echo "Success!"
+            echo "Now install mysql support for php: " & sudo apt install php-mysql && echo "Success!"
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php
             
@@ -65,8 +65,8 @@ jobs:
       - run:
           name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client & echo -n "Success!"
-            echo "Now install mysql support for php: " & sudo apt install php7.3-mysql && echo -n "Success!"
+            echo "Now install mysql: " & sudo apt-get update & sudo apt-get install mysql-client & echo "Success!"
+            echo "Now install mysql support for php: " & sudo apt install php7.3-mysql && echo "Success!"
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php
             
@@ -102,8 +102,8 @@ jobs:
       - run:
           name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " & sudo apt-get update && sudo apt-get install mysql-client & echo -n "Success!"
-            echo "Now install mysql support for php: " & sudo apt install php7.3-mysql && echo -n "Success!"
+            echo "Now install mysql: " & sudo apt-get update & sudo apt-get install mysql-client & echo "Success!"
+            echo "Now install mysql support for php: " & sudo apt install php7.3-mysql && echo "Success!"
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql & echo "Success!"
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php & echo "Success!"
             
@@ -141,7 +141,7 @@ jobs:
           name: Setting Up MySQL
           command: |
             echo "Now upgrade system: " & sudo apt-get update
-            echo "Now install mysql: " & sudo apt-get install mysql-client & echo -n "Success!"
+            echo "Now install mysql: " & sudo apt-get install mysql-client & echo "Success!"
       - run:
           name: Importing Data
           command: |      
