--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,9 @@ jobs:
       - run:
           name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " & sudo apt-get update & sudo apt-get install mysql-client & echo "Success!"
-            echo "Now install mysql support for php: " & sudo apt install php-mysql && echo "Success!"
+            echo "Now upgrade system: " & sudo apt-get update
+            echo "Now install mysql: " & sudo apt-get install mysql-client php3.7-mysql & echo "Success!"
+            /*echo "Now install mysql support for php: " & sudo apt install php3.7-mysql && echo "Success!"*/
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php
             
@@ -65,7 +66,8 @@ jobs:
       - run:
           name: Setting Up MySQL
           command: |
-            echo "Now install mysql: " & sudo apt-get update & sudo apt-get install mysql-client & echo "Success!"
+            echo "Now upgrade system: " & sudo apt-get update
+            echo "Now install mysql: " & sudo apt-get install mysql-client & echo "Success!"
             echo "Now install mysql support for php: " & sudo apt install php7.3-mysql && echo "Success!"
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php
