--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,13 @@ jobs:
           command: |
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php
+            FILE=Code/db.config.php
+            if [ -f "$FILE" ]; then
+               echo "$FILE exist"
+            else
+                echo "$FILE not exist"
+                exit 1
+            fi
             
       #testing index.php
       - run:
@@ -87,6 +94,13 @@ jobs:
           command: |
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php
+            FILE=Code/db.config.php
+            if [ -f "$FILE" ]; then
+               echo "$FILE exist"
+            else
+                echo "$FILE not exist"
+                exit 1
+            fi
             
       #testing check.php
       - run:
@@ -133,6 +147,13 @@ jobs:
           command: |
             echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
             echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php
+            FILE=Code/db.config.php
+            if [ -f "$FILE" ]; then
+               echo "$FILE exist"
+            else
+                echo "$FILE not exist"
+                exit 1
+            fi
             
       #testing index.php
       - run:
