--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -372,7 +372,7 @@ workflows:
             - managePost
             - getUserInfo
             - getPostInfo
-      - removePost:
+      - deletePost:
           requires:
             - managePost
             - getUserInfo
