--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -346,6 +346,59 @@ jobs:
           command: cd Code/utils/api && echo 'session=0&id=0&class=class1' | REQUEST_METHOD=POST  SCRIPT_FILENAME=deletePost.php REDIRECT_STATUS=CGI CONTENT_TYPE=application/www-form-urlencoded php-cgi
           name: Running deletePost page
           
+  getPost:
+    docker:
+      - image: circleci/php:7.3.5
+      - image: circleci/mysql:5.7
+        environment:
+            MYSQL_ROOT_PASSWORD: ''
+            MYSQL_DATABASE: studentoa
+            MYSQL_USER: user
+            MYSQL_PASSWORD: passw0rd
+
+    working_directory: ~/project/
+    steps:
+      - checkout
+      - run:
+      # Our primary container isn't MYSQL so run a sleep command until it's ready.
+          name: Waiting MySQL
+          command: |
+            for i in `seq 1 10`;
+            do
+              nc -z 127.0.0.1 3306 && echo MySQL is ready! && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
+      - run:
+          name: Upgrading System
+          command: sudo apt-get update
+      - run:
+          name: Installing MySQL
+          command: sudo apt-get install mysql-client
+      - run:
+          name: Installing PHP driver
+          command: |
+            sudo docker-php-ext-install pdo_mysql
+            sudo docker-php-ext-enable pdo_mysql
+      - run:
+          name: Setting Up MySQL
+          command: |
+            echo "Now import data: " & mysql -h 127.0.0.1 -u root studentoa < Code/admin/builder.sql
+            echo "Now create database config: " && mv Code/admin/template.db.config.php Code/db.config.php
+            FILE=Code/db.config.php
+            if [ -f "$FILE" ]; then
+               echo "$FILE exist"
+            else
+                echo "$FILE not exist"
+                exit 1
+            fi
+            
+      #testing getPost.php
+      - run:
+          command: cd Code/utils/api && echo 'session=0&class=class1' | REQUEST_METHOD=POST  SCRIPT_FILENAME=getPost.php REDIRECT_STATUS=CGI CONTENT_TYPE=application/www-form-urlencoded php-cgi
+          name: Running getPost page
+          
 workflows:
   version: 2
   home_and_class:
@@ -375,3 +428,4 @@ workflows:
             - managePost
             - getUserInfo
             - getPostInfo
+      - getPost
