--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Code/Server/Server"]
+[submodule "Code/Server"]
 	path = Code/Server
 	url = https://github.com/rospino74/StudentOS-Server
